--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ unbind ^A
 bind ^A select-pane -t :.+
 
 # Mouse support - set to on if you want to use the mouse
-setw -g mode-mouse off
+setw -g mode-mouse on
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
 set -g mouse-select-window off
