tmux.conf updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,91 @@
-# remap prefix to Control + a
+#################################################
+# General
+#################################################
+
+# Set the default terminal mode to 256color mode
+set -g default-terminal "session-256color"
+
+# Remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# force a reload of the config file
+# Force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
 
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+#################################################
+# Keys
+#################################################
 
-# Mouse support - set to on if you want to use the mouse
-setw -g mode-mouse on
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+# Enable vi keys.
+setw -g mode-keys vi
 
-# Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
+# Escape turns on copy mode
+bind Escape copy-mode
+
+# v in copy mode starts making selection
+bind-key -T copy-mode v send -X begin-selection
+bind-key -T copy-mode y send -X copy-selection
+
+# make Prefix p paste the buffer.
+unbind p
+bind p paste-buffer
+
+#################################################
+# Status
+#################################################
+
+# Set status bar on
+set -g status on
+
+# Update the status line every second
+set -g status-interval 1
+
+# Set the position of window lists.
+set -g status-justify centre
+
+# Set Vi style keybinding in the status line
+set -g status-keys vi
+
+# Set the status bar position
+set -g status-position top
+
+# Set status bar background and foreground color.
+set -g status-style fg=white,bg="#002b36"
+
+#################################################
+# Status layout and items
+#################################################
+
+# Set left side status bar length and style
+set -g status-left-length 60
+set -g status-left-style default
+
+# Display the session name
+set -g status-left "#[fg=green] #S #[default]"
+
+# Display the time
+set -ag status-right "#[fg=colour172,bright,bg=default] l:%M %p #[default]"
+
+# Set right side status bar length and style
+set -g status-right-length 140
+set -g status-right-style default
+
+# Display the date and time
+set -g status-right "#[fg=white,bg=default] %a %d %H:%M %p #[default]"
+
+# Display load
+#set -ag status-right "#[fg=green,gb=default,bright] #(top -l 1 | grep -E "^CPU" | sed 's/.*://') #[default]"
+set -ag status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 1)#[default]"
+
+# Display the hostname
+set -ag status-right "#[fg=cyan,bg=default] #H #[default]"
+
+# Set the inactive window color and style
+set -g window-status-style fg=colour244,bg=default
+set -g window-status-format ' #I #W '
+
+# Set the active window color and style
+set -g window-status-current-style fg=black,bg=colour10
+set -g window-status-current-format ' #I #W '
