Tmux colour tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 #################################################
 
 # Set the default terminal mode to 256color mode
-set -g default-terminal "session-256color"
+#set -g default-terminal "session-256color"
 
 # Remap prefix to Control + a
 set -g prefix C-a
@@ -52,7 +52,7 @@ set -g status-keys vi
 set -g status-position top
 
 # Set status bar background and foreground color.
-set -g status-style fg=white,bg="#002b36"
+set -g status-style fg=white,bg=colour238
 
 #################################################
 # Status layout and items
@@ -63,7 +63,7 @@ set -g status-left-length 60
 set -g status-left-style default
 
 # Display the session name
-set -g status-left "#[fg=green] #S #[default]"
+set -g status-left "#[fg=white] #S #[default]"
 
 # Display the time
 set -ag status-right "#[fg=colour172,bright,bg=default] l:%M %p #[default]"
@@ -77,10 +77,10 @@ set -g status-right "#[fg=white,bg=default] %a %d %H:%M %p #[default]"
 
 # Display load
 #set -ag status-right "#[fg=green,gb=default,bright] #(top -l 1 | grep -E "^CPU" | sed 's/.*://') #[default]"
-set -ag status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 1)#[default]"
+set -ag status-right "#S #[fg=white,bg=default]#(tmux-mem-cpu-load --colors --interval 1)#[default]"
 
 # Display the hostname
-set -ag status-right "#[fg=cyan,bg=default] #H #[default]"
+set -ag status-right "#[fg=white,bg=default] #H #[default]"
 
 # Set the inactive window color and style
 set -g window-status-style fg=colour244,bg=default
