--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,22 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 #################################################
+# Options
+#################################################
+
+# By default, status msg disappears in the blink of an eye (750ms)
+set-option -g display-time 2000
+
+# By default, pane number disappears in 1 s
+set-option -g display-panes-time 2000
+
+# maximum number of lines held in window history - crank it up from 2k default
+set-option -g history-limit 50000
+
+# default names are too vague to see. Let me name it.
+set-option -wg automatic-rename off
+
+#################################################
 # Keys
 #################################################
 
@@ -89,3 +105,13 @@ set -g window-status-format ' #I #W '
 # Set the active window color and style
 set -g window-status-current-style fg=black,bg=colour10
 set -g window-status-current-format ' #I #W '
+
+#################################################
+# fzf
+#################################################
+
+bind C-j display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}' |\
+    xargs tmux switch-client -t"
