--- a/tmux.conf
+++ b/tmux.conf
@@ -3,23 +3,26 @@
 #################################################
 
 # Set the default terminal mode to 256color mode
-#set -g default-terminal "session-256color"
+set -g default-terminal "xterm-256color"
 
 # Remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
+# Source .tmux.conf as suggested in `man tmux`
+bind R source-file ~/.tmux.conf
 
 #################################################
 # Options
+# (reference https://github.com/tmux-plugins/tmux-sensible)
 #################################################
 
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
 # By default, status msg disappears in the blink of an eye (750ms)
-set-option -g display-time 2000
+set-option -g display-time 4000
 
 # By default, pane number disappears in 1 s
 set-option -g display-panes-time 2000
@@ -30,12 +33,31 @@ set-option -g history-limit 50000
 # default names are too vague to see. Let me name it.
 set-option -wg automatic-rename off
 
+# Focus events enabled for terminals that support them
+set -g focus-events on
+
+# Super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
+
+#################################################
+# Windows
+#################################################
+
+# https://dev.to/krishnam/tmux-13-cool-tweaks-to-make-it-personal-and-powerful-487p
+
+# Window index will start with 1
+set-option -g base-index 1
+
+# Pane index will start with 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 #################################################
 # Keys
 #################################################
 
-# Enable vi keys.
-setw -g mode-keys vi
+# Enable emacs keys.
+setw -g mode-keys emacs
 
 # Escape turns on copy mode
 bind Escape copy-mode
@@ -115,3 +137,12 @@ bind C-j display-popup -E "\
     sed '/^$/d' |\
     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}' |\
     xargs tmux switch-client -t"
+
+#################################################
+# Plugins
+#################################################
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '~/.tmux/plugins/tpm/tpm'
