--- a/tmux.conf
+++ b/tmux.conf
@@ -70,6 +70,11 @@ bind-key -T copy-mode y send -X copy-selection
 unbind p
 bind p paste-buffer
 
+# Pane movement
+# https://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
+bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
 #################################################
 # Status
 #################################################
