--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -39,6 +39,7 @@ services:
 
   finances:
     image: nginx
+    container_name: finances
     volumes:
       - /home/jamie/finances/output:/usr/share/nginx/html
     ports:
@@ -47,6 +48,20 @@ services:
       - NGINX_HOST=
       - NGINX_PORT=80
 
+  dockerproxy:
+    image: ghcr.io/tecnativa/docker-socket-proxy:latest
+    container_name: dockerproxy
+    environment:
+      - CONTAINERS=1 # Allow access to viewing containers
+      - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
+      - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
+      - POST=0 # Disallow any POST operations (effectively read-only)
+    ports:
+      - 127.0.0.1:2375:2375
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
+    restart: unless-stopped
+
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
@@ -54,3 +69,5 @@ services:
       - 3000:3000
     volumes:
       - /home/jamie/dotfiles/services/homepage-config:/app/config
+    restart: unless-stopped
+    env_file: .env
