--- a/services/homepage-config/services.yaml
+++ b/services/homepage-config/services.yaml
@@ -56,6 +56,9 @@
   - Secondary router:
       href: http://192.168.178.100
       description: NETGEAR AP WAC104
+  - Printer:
+      href: http://192.168.178.27/
+      description: M283x Series
   - Battery:
       href: http://192.168.178.20
       description: Puredrive nanopi
